[metadata]
# replace with your username:
name = g711
version = 1.6.5
author = Alexey Stolpovsky
author_email = stolpa413@gmails.com
description = A small library for A-Law and u-Law audio coding
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stolpa4/g711
project_urls =
    Bug Tracker = https://github.com/stolpa4/g711/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
